rendered/envs/demo/netbird/deployment-coturn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: coturn
    app.kubernetes.io/name: coturn
  name: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coturn
      app.kubernetes.io/name: coturn
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: coturn
        app.kubernetes.io/name: coturn
    spec:
      containers:
        - args:
            - -v
            - --tcp-proxy-port
            - "5555"
            - --prometheus
            - --prometheus-username-labels
            - --web-admin
            - -u
            - $TURN_USER:$TURN_PASSWORD
            - --no-udp-relay
          image: coturn/coturn
          imagePullPolicy: Always
          name: coturn
          ports:
            - containerPort: 3478
              name: turn-port-udp
              protocol: UDP
            - containerPort: 3478
              name: turn-port-tcp
              protocol: TCP
            - containerPort: 5555
              name: turn-proxy
              protocol: TCP
