rendered/envs/demo/netbird/deployment-netbird-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbird-management
    app.kubernetes.io/version: 0.36.3
    helm.sh/chart: netbird-1.5.6
  name: netbird-management
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-management
  template:
    metadata:
      annotations:
        checksum/config: ba6c9fdbf7563ad28981a09bf38b01e055d9ef28bda91708e44018cbb1c75512
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-management
    spec:
      containers:
        - args:
            - --port=80
            - --log-file=console
            - --log-level=info
            - --disable-anonymous-metrics=false
            - --single-account-mode-domain=netbird.example.com
            - --dns-domain=netbird.selfhosted
          image: netbirdio/management:0.36.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 3
          name: netbird-management
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 33073
              name: grpc
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 3
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /etc/netbird
              name: config
            - mountPath: /var/lib/netbird
              name: management
      securityContext: {}
      serviceAccountName: netbird-management
      volumes:
        - configMap:
            name: netbird-management
          name: config
        - emptyDir: {}
          name: management
