rendered/envs/demo/netbird/deployment-netbird-relay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbird-relay
    app.kubernetes.io/version: 0.36.3
    helm.sh/chart: netbird-1.5.6
  name: netbird-relay
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-relay
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-relay
    spec:
      containers:
        - env:
            - name: NB_LISTEN_ADDRESS
              value: :33080
            - name: NB_LOG_LEVEL
              value: info
            - name: NB_AUTH_SECRET
              valueFrom:
                secretKeyRef:
                  key: relayPassword
                  name: netbird
            - name: NB_EXPOSED_ADDRESS
              valueFrom:
                secretKeyRef:
                  key: relayAddress
                  name: netbird
          image: netbirdio/relay:0.36.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: http
          name: netbird-relay
          ports:
            - containerPort: 33080
              name: http
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: http
          resources: {}
          securityContext: {}
      securityContext: {}
      serviceAccountName: netbird-relay
