rendered/envs/demo/netbird/deployment-netbird-signal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbird-signal
    app.kubernetes.io/version: 0.36.3
    helm.sh/chart: netbird-1.5.6
  name: netbird-signal
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-signal
    spec:
      containers:
        - args:
            - --port
            - "80"
            - --log-level
            - info
            - --log-file
            - console
          image: netbirdio/signal:0.36.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: grpc
          name: netbird-signal
          ports:
            - containerPort: 80
              name: grpc
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: grpc
          resources: {}
          securityContext: {}
      securityContext: {}
      serviceAccountName: netbird-signal
