rendered/envs/demo/netbird/service-netbird-relay.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbird-relay
    app.kubernetes.io/version: 0.36.3
    helm.sh/chart: netbird-1.5.6
  name: netbird-relay
  namespace: netbird
spec:
  ports:
    - name: http
      port: 33080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-relay
  type: ClusterIP
