rendered/envs/demo/netbird/service-netbird-signal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: netbird-signal
    app.kubernetes.io/version: 0.36.3
    helm.sh/chart: netbird-1.5.6
  name: netbird-signal
  namespace: netbird
spec:
  ports:
    - name: grpc
      port: 80
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-signal
  type: ClusterIP
