rendered/envs/demo/netbird/ingressroute-netbird-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: netbird-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`netbird.demo.budd.ee`) && !PathPrefix(`/api`) && !PathPrefix(`/management`) && !PathPrefix(`/signalexchange`) && !PathPrefix(`/relay`)
      services:
        - name: netbird-traefik-dashboard
          namespace: netbird-traefik
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`netbird.demo.budd.ee`) && PathPrefix(`/api`)
      services:
        - name: netbird-traefik-management
          namespace: netbird-traefik
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`netbird.demo.budd.ee`) && PathPrefix(`/relay`)
      services:
        - name: netbird-traefik-relay
          namespace: netbird-traefik
          passHostHeader: true
          port: 33080
    - kind: Rule
      match: Host(`netbird.demo.budd.ee`) && PathPrefix(`/management`)
      services:
        - name: netbird-traefik-management
          namespace: netbird-traefik
          passHostHeader: true
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`netbird.demo.budd.ee`) && PathPrefix(`/signalexchange`)
      services:
        - name: netbird-traefik-signal
          namespace: netbird-traefik
          passHostHeader: true
          port: 80
          scheme: h2c
